--- a/style.css
+++ b/style.css
@@ -1,11 +1,20 @@
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap");
+
 .quicksand {
   font-family: "Quicksand", serif;
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+  text-transform: capitalize;
 }
 .orange {
   color: orange;
 }
-#sky-blue {
+.sky-blue {
   color: skyblue;
 }
 .see {
@@ -16,4 +25,182 @@
 }
 .none {
   display: none;
+}
+.header {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.menu ul {
+  display: flex;
+  gap: 30px;
+}
+.menu ul a {
+  font-size: 1.3rem;
+  font-weight: 500;
+}
+.logo {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.logo > p {
+  font-size: 2rem;
+  font-weight: bold;
+}
+.contact {
+  margin-left: 200px;
+  background-color: orange;
+  padding: 10px 20px;
+  border-radius: 5px;
+  color: white;
+}
+@media screen and (max-width: 570px) {
+  .menu {
+    display: none;
+  }
+  .logo p {
+    display: none;
+  }
+  .none {
+    display: block;
+  }
+  .none i {
+    font-size: 2rem;
+    margin-right: 1rem;
+  }
+  .header > span {
+    color: orange;
+  }
+}
+main {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+.banner {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+.banner_text h1 {
+  font-size: 4rem;
+  margin-bottom: 2rem;
+}
+.banner_text p {
+  font-size: 1.3rem;
+}
+.banner_text .Banner_btn {
+  padding: 10px 20px;
+  background-color: black;
+  color: white;
+  border-radius: 10px;
+  margin-top: 3rem;
+  font-size: 1.3rem;
+}
+@media screen and (max-width: 570px) {
+  .banner {
+    flex-direction: column-reverse;
+    justify-content: center;
+  }
+  .banner_text h1 {
+    font-size: 2rem;
+    text-align: center;
+    margin-top: 1rem;
+  }
+  .banner_img img {
+    width: 100%;
+  }
+  .banner_text p {
+    font-size: 1rem;
+    text-align: center;
+    margin-top: 1rem;
+  }
+  .banner_text .Banner_btn {
+    margin-left: 30%;
+  }
+}
+/*   Standard_Curriculum */
+.Standard_Curriculum {
+  margin-top: 5rem;
+  background-image: url(assets/bg.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-bottom: 5rem;
+}
+.Standard_Curriculum h1 {
+  text-align: center;
+  margin-bottom: 5rem;
+  font-size: 3rem;
+  font-weight: 800;
+}
+.Curriculum_cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 80px;
+}
+.curriculum_card {
+  border-radius: 10px;
+  width: 400px;
+  padding: 30px;
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  align-items: center;
+  flex-direction: column;
+  background: linear-gradient(to bottom, #87ceeb, #ffffff);
+}
+.curriculum_card h3 {
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+.ReadMOre1 {
+  color: #01a4e4;
+  font-size: 1.2rem;
+}
+.card2 {
+  background: linear-gradient(to bottom, #90ee90, #ffffff);
+}
+.card3 {
+  background: linear-gradient(to bottom, #ffc0cb, #ffffff);
+}
+.ReadMOre3 {
+  font-size: 1.2rem;
+  color: #053649;
+}
+.ReadMOre2 {
+  font-size: 1.2rem;
+  color: #011a01;
+}
+.button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  height: 20vh;
+}
+
+.circle-button {
+  background-color: orange;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  font-size: 20px;
+}
+
+@media screen and (max-width: 570px) {
+  .curriculum_cards {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
