--- a/style.css
+++ b/style.css
@@ -310,8 +310,12 @@ main {
   .our_img {
     display: none;
   }
+  .our_story_img img {
+    width: 100%;
+  }
   .our-img-conteiner {
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    max-width: 100%;
   }
   .our-img-conteiner a {
     top: 19%;
